# mathlib

./: CMakeLists.txt  Makefile.in  configure  configure.ac  mathlibConfig.cmake.in  ultimConfig.cmake.in
src/: AARCH64_DPChange.c  AARCH64_DPChange.h  AARCH64_endian.h  CMakeLists.txt  DPChange.c  DPChange.h  LINUX64_DPChange.c  LINUX_DPChange.c  MSVC_DPChange.c  Makefile.am  Makefile.in  MathLib.h  endian.h  mathlib_config.h  mathlib_configuration.h.in  sincos32.h  utan.c
